package NKikimrResourceBroker;
option java_package = "ru.yandex.kikimr.proto";

enum EResourceType {
    CPU    = 0;
    MEMORY = 1;
};

message TResources {
    // Index is EResourceType.
    repeated uint64 Resource = 1;
    // New style settings
    optional uint64 Cpu = 2;
    optional uint64 Memory = 3;
};

message TQueueConfig {
    optional string Name = 1;
    optional uint32 Weight = 2;
    optional TResources Limit = 3;
};

message TTaskConfig {
    optional string Name = 1;
    // Queue task is assigned to.
    optional string QueueName = 2;
    // Task duration used as a default value before statistics is collected.
    optional uint64 DefaultDuration = 3;
};

message TResourceBrokerConfig {
    // Queue with "default" name is required.
    repeated TQueueConfig Queues = 1;
    // Task type with "unknown" name is required.
    repeated TTaskConfig Tasks = 2;
    optional TResources ResourceLimit = 3;
};

message TResourceBrokerConfigResult {
    optional bool Success = 1;
    optional string Message = 2;
};
